The routing is now handled by the Angular router.

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,8 +5,9 @@
   <hr />
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipeElement of recipes"
+      *ngFor="let recipeElement of recipes; let i = index"
       [recipe]="recipeElement"
+      [index]="i"
     ></app-recipe-item>
   </div>
 </div>
