--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="containter-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Shop</a>
+      <a [routerLink]="['/recipes']" class="navbar-brand">Shop</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
