Recipes can now be stored in FireBase

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
           ></a>
           <ul class="dropdown-menu">
             <li>
-              <a style="cursor: pointer;">Save</a>
+              <a style="cursor: pointer;" (click)="onSave()">Save</a>
             </li>
             <li>
               <a style="cursor: pointer;">Fetch</a>
