Recipes can now be fetched from FireBase

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
               <a style="cursor: pointer;" (click)="onSave()">Save</a>
             </li>
             <li>
-              <a style="cursor: pointer;">Fetch</a>
+              <a style="cursor: pointer;" (click)="onFetch()">Fetch</a>
             </li>
           </ul>
         </li>
