--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,6 +26,9 @@
             </li>
           </ul>
         </li>
+        <li routerLinkActive="active">
+          <a style="cursor: pointer;" [routerLink]="['/auth']">Authenticate</a>
+        </li>
       </ul>
     </div>
   </div>
