--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,21 +1,44 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form>
+    <h1 class="text-center text-primary">
+      {{ inLoginMode ? "Login" : "Sign Up" }}
+    </h1>
+    <hr />
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
         <label for="email">Email address</label>
-        <input id="email" type="email" class="form-control" />
+        <input
+          id="email"
+          type="email"
+          class="form-control"
+          ngModel
+          name="email"
+          required
+          email
+        />
       </div>
       <div class="form-group">
         <label for="email">Password</label>
-        <input id="password" type="password" class="form-control" />
+        <input
+          id="password"
+          type="password"
+          class="form-control"
+          ngModel
+          name="password"
+          minlength="6"
+        />
       </div>
       <div>
-        <button class="btn btn-primary">
-          Sign Up
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="!authForm.valid"
+        >
+          {{ inLoginMode ? "Login" : "Sign Up" }}
         </button>
         |
-        <button class="btn btn-success">
-          Switch to Login
+        <button type="button" class="btn btn-success" (click)="onModeToggle()">
+          Switch to {{ inLoginMode ? "Sign Up" : "Login" }}
         </button>
       </div>
     </form>
