--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="containter-fluid">
     <div class="navbar-header">
       <a [routerLink]="['/recipes']" class="navbar-brand">Shop</a>
