--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,14 +13,6 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="isAuthenticated">
-          <a
-            style="cursor: pointer;"
-            *ngIf="isAuthenticated"
-            (click)="onLogout()"
-            >Logout</a
-          >
-        </li>
         <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer;" class="dropdown-toggle" role="button"
             >Options <span class="caret"></span
@@ -34,8 +26,16 @@
             </li>
           </ul>
         </li>
+        <li *ngIf="isAuthenticated">
+          <a
+            style="cursor: pointer;"
+            *ngIf="isAuthenticated"
+            (click)="onLogout()"
+            >Logout</a
+          >
+        </li>
         <li routerLinkActive="active" *ngIf="!isAuthenticated">
-          <a style="cursor: pointer;" [routerLink]="['/auth']">Authenticate</a>
+          <a style="cursor: pointer;" [routerLink]="['/auth']">Login</a>
         </li>
       </ul>
     </div>
