--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,10 +3,14 @@
     <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group">
+      <!-- the async pipe subscribes to the ingredients observable and allows access to the ingredients once the observable has been resolved-->
       <a
         class="list-group-item"
         style="cursor: pointer;"
-        *ngFor="let ingredient of ingredients; let i = index"
+        *ngFor="
+          let ingredient of (ingredients | async).ingredients;
+          let i = index
+        "
         (click)="onEditItem(i)"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
